# js-vs-rust

./: .npmrc  README.md  index.js  instructions.txt  package-lock.json  package.json
_results/: Compared.xlsx  result.txt
client/: package-lock.json  package.json
client/rust/: Cargo.toml
client/rust/src/: lib.rs
client/simple_excel_writer_wasm/: Cargo.toml
client/src/: App.css  App.js  DownloadExcel.js
frontend/: package-lock.json  package.json
frontend/public/: index.html  locations.txt  manifest.json
frontend/rust-demo/: .gitignore  Cargo.toml  README.md
frontend/rust-demo/src/: lib.rs
frontend/simple-excel-writer-wasm/: .gitignore  Cargo.toml  LICENSE_MIT  README.md
frontend/simple-excel-writer-wasm/src/: lib.rs
frontend/src/: App.css  App.js  DownloadExcel.js  index.css
rust/: Cargo.toml
rust/src/: lib.rs
src/: App.css  App.js
