[package]
name = "rust-demo"
version = "0.1.0"
authors = ["fpoljcic <fpoljcic1@etf.unsa.ba>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fpoljcic/js-vs-rust"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3.37"

[profile.release]
opt-level = "s"
