[package]
name = "simple-excel-writer-wasm"
version = "0.1.0"
authors = ["fpoljcic <fpoljcic1@etf.unsa.ba>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde_json = "1.0.54"
serde_derive = "1.0.111"
serde = "1.0.111"

[dependencies.zip]
version = "0.5.5"
default-features = false
features = ["deflate"]

[profile.release]
opt-level = "s"